tolk-tester/tests/invalid-symbol/err-2516.tolk
fun main() {
    fun(x: int, y: asdf) {  }
}

/**
@compilation_should_fail
@stderr unknown type name `asdf`
 */
